--- a/pag1.css
+++ b/pag1.css
@@ -1,13 +1,20 @@
+body{
+    background-color: rgba(0, 0, 0, 0.849);
+    margin: 0;
+}
+
 header{
     display: flex;
-    justify-content: space-around;
-    background-color: rgba(34, 124, 41, 0.658);
+    justify-content: space-between;
+    background-color: rgba(29, 197, 43, 0.658);
     height: 90px;
     align-items: center;
 }
 
+
 ul{
     display: flex;
+    margin-right: 20px;
     gap: 30px;
 }
 
@@ -24,6 +31,10 @@ a{
 a:hover{
     font-size: 17px;
     color: rgb(255, 255, 255);
+}
+
+.main{
+    color: white;
 }
 
 
