--- a/pag1.css
+++ b/pag1.css
@@ -37,4 +37,14 @@ a:hover{
     color: white;
 }
 
+.card-descricao{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+}
 
+.card-descricao p{
+    line-height: 35px;
+    font-size: 20px;
+}
