--- a/pag1.css
+++ b/pag1.css
@@ -1,25 +1,40 @@
 body{
-    background-color: rgba(0, 0, 0, 0.849);
+    background-color: rgb(201, 198, 198);
     margin: 0;
 }
 
-header{
+.menu{
     display: flex;
     justify-content: space-between;
-    background-color: rgba(29, 197, 43, 0.658);
-    height: 90px;
+    background-color: #f2f3f4;
+    height: 30%;
     align-items: center;
 }
 
+.img-header {
+    margin-left: 1%;
+    min-width: 20px;
+    max-width: 60px;
+}
+
+.navegador {
+    margin: 0;
+    padding: 0;
+}
 
 ul{
     display: flex;
+    align-items: center;
     margin-right: 20px;
-    gap: 30px;
+    gap: 15px;
 }
 
 li{
     list-style: none;
+}
+
+li:hover {
+    transform: scale(1.1);
 }
 
 a{
@@ -28,23 +43,39 @@ a{
     font-size: 13px;
 }
 
-a:hover{
-    font-size: 17px;
-    color: rgb(255, 255, 255);
+span {
+    color: green;
 }
 
-.main{
-    color: white;
-}
-
-.card-descricao{
+.section-01 {
     display: flex;
-    align-items: center;
-    flex-direction: row;
+    justify-content: center;
+    margin: 2%;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
-.card-descricao p{
-    line-height: 35px;
-    font-size: 20px;
+.card {
+    display: flex;
+    justify-content:center ;
+    flex-direction: column;
+    height: 26rem;
+    width: 20%;
+    padding: 4px;
+    color: white;
+    background-color: black;
+    border: solid 2px black;
 }
+
+.card:hover {
+   border-color: rgb(0, 4, 255);
+}
+
+.section-02 {
+    display: flex;
+    justify-content: center;
+    margin: 2%;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
