seguindo o estudo com o professor
nesse conteudo eu seguir com a aula do professor

--- a/pag1.css
+++ b/pag1.css
@@ -7,7 +7,7 @@ body{
     display: flex;
     justify-content: space-between;
     background-color: #f2f3f4;
-    height: 30%;
+    height: auto;
     align-items: center;
 }
 
