--- a/Aula.css
+++ b/Aula.css
@@ -2,78 +2,65 @@ body {
     margin: 0;
 }
 
-/* Meu Header */
-.cabecalho {
+header {
     display: flex;
-    justify-content: left;
-    align-items: center;
-    padding: 0px 0px 0px 10px;
-    gap: 10px;
-    background-color: #b1e6d1;
-}
-
-/* Minha Imagem Do Header */
-.img-cabecalho {
-    width: 100%;
-    max-width: 50px;
-}
-
-/* Meu Titulo Do Header */
-.title-cabecalho {
-    font-size: 2rem;
-}
-
-
-/* Minha Primeria Section */
-.sec-01 {
-    background-color: #270a33;
+    justify-content: center;
+    background-color: black;
     color: white;
+}
+
+.section-01 {
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+    gap: 10px;
+}
+
+.section-01 img {
+    border-radius: 10px;
+    width: 25%;
+}
+
+
+.text-01 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40vh;
-    gap: 15px;
+    flex-direction: column;
+    text-align: center;
+    width: 700px;
 
 }
 
-/* Minha Img Da Primeira Section */
-.img-sec {
-    width: 100%;
-    max-width: 100px;
-}
-
-/* Minha Segunda Section  */
-.sec-02 {
-    background-color: #451a3e;
-    color: white;
+.section-02 {
     display: flex;
     justify-content: center;
     flex-direction: row-reverse;
-    align-items: center;
-    height: 40vh;
-    gap: 10px;
-
+    margin: 40px;
+    gap: 20px;
 }
 
-.sec-03 {
-    background-image: url(Aula-Img/pexels-pixabay-41949.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 150px;
+.section-02 img {
+    border-radius: 10px;
+    width: 25%;
 }
 
-.sec-03 {
+.text-02 {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.btn-sec03 {
-    background-color:  #b1e6d1;
-    border: none;
-    border-radius: 10px;
-    height: 30px;
-    width: 100px;
+    flex-direction: column;
+    text-align: center;
+    width: 700px;
 
 }
+
+.section-03 {
+    background-image: url(Aula-Img/img-1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    padding: 10%;
+}
+
+
