--- a/pag1.css
+++ b/pag1.css
@@ -1,9 +1,9 @@
-body{
+body {
     background-color: rgb(201, 198, 198);
     margin: 0;
 }
 
-.menu{
+.menu {
     display: flex;
     justify-content: space-between;
     background-color: #f2f3f4;
@@ -22,14 +22,14 @@ body{
     padding: 0;
 }
 
-ul{
+ul {
     display: flex;
     align-items: center;
     margin-right: 20px;
     gap: 15px;
 }
 
-li{
+li {
     list-style: none;
 }
 
@@ -37,7 +37,7 @@ li:hover {
     transform: scale(1.1);
 }
 
-a{
+a {
     text-decoration: none;
     color: black;
     font-size: 13px;
@@ -57,7 +57,7 @@ span {
 
 .card {
     display: flex;
-    justify-content:center ;
+    justify-content: center;
     flex-direction: column;
     height: 26rem;
     width: 20%;
@@ -68,7 +68,8 @@ span {
 }
 
 .card:hover {
-   border-color: rgb(0, 4, 255);
+    border: solid 2px rgb(59, 27, 134)'';
+    box-shadow: 0px 0px 10px 5px rgb(59, 27, 134);
 }
 
 .section-02 {
@@ -79,3 +80,40 @@ span {
     gap: 10px;
 }
 
+@media (max-width: 320px) {
+
+    body {
+        margin: 0;
+    }
+
+    header {
+        width: 100%;
+        margin: 0px 0px 10px 0px;
+    }
+
+    .section-01 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 100%;
+        margin: 0;
+    }
+
+    .card {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .section-02 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 100%;
+        margin: 0;
+    }
+}
