--- a/style.css
+++ b/style.css
@@ -24,6 +24,18 @@ header img {
     width: auto;
 }
 
+/* icones do menu hamburguer */
+.menu-ham {
+    display: none;
+    cursor: pointer;
+    font-size: 2rem;
+    color: white;
+}
+
+.nav-menu {
+    display: none;
+}
+
 /* Ul Do Meu Nav */
 .navegador ul {
     display: flex;
@@ -210,89 +222,4 @@ header img {
     display: flex;
     align-items: center;
     gap: 5px;
-}
-
-
-@media (max-width: 834px) {
-
-    .section-01,
-    .section-02,
-    .section-04,
-    .section-05 {
-        padding: 50px 60px;
-    }
-
-    .section-01 img:hover,
-    .section-02 img:hover,
-    .section-04 img:hover {
-        transform: none;
-    }
-
-    .section-05 {
-        justify-content: center;
-        gap: 20px;
-    }
-
-    .section-05 iframe {
-        width: 100%;
-        max-width: 320px;
-        height: auto;
-    }
-
-    .text-01,
-    .text-02,
-    .text-04 {
-        width: 100%;
-    }
-
-    .navegador ul {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .navegador a {
-        font-size: 1.2rem;
-    }
-
-    header {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .section-03 {
-        padding: 60px 20px;
-        background-attachment: scroll;
-    }
-
-    .section-03 button {
-        width: 100%;
-        max-width: 200px;
-    }
-
-    .card {
-        flex-direction: column;
-        width: 100%;
-        max-width: 320px;
-        height: fit-content;
-    }
-
-    .cards {
-        transition: 0.5s;
-        width: 100%;
-    }
-
-    .cards:hover {
-        transform: none;
-    }
-
-    .rodape {
-        flex-direction: column;
-        text-align: center;
-        gap: 20px;
-    }
-
-    .icone {
-        justify-content: center;
-        flex-wrap: wrap;
-    }
 }
